aigisEXP html trim

--- a/html/AigisEXP.html
+++ b/html/AigisEXP.html
@@ -136,47 +136,28 @@
             <div class="box boxswitch" style="background-color: #000000;">
               <label for="Panel0"> <b>聖霊</b> </label>
             </div>
+            <!-- switch -->
             <input type="checkbox" id="Panel0" class="on-off" checked="true">
             <div class="accContent">
 
               <div class="box training show" id="expSeirei">
                 <div class="box1">聖霊</div>
-                <div class="box2" title="500">500</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="500"></div>
               </div>
 
               <div class="box training show" id="expGladys">
                 <div class="box1">同レア聖霊/グラディス</div>
-                <div class="box2" title="1000">1000</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="1000"></div>
               </div>
 
               <div class="box training show" id="expWArmor">
                 <div class="box1">白鎧</div>
-                <div class="box2" title="5000">5000</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="5000"></div>
               </div>
 
               <div class="box training show" id="expBArmor">
                 <div class="box1">黒鎧</div>
-                <div class="box2" title="40000">40000</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="40000"></div>
               </div>
 
             </div>
@@ -185,95 +166,56 @@
             <div class="box boxswitch" style="background-color: #22b14c;">
               <label for="Panel1"> <b>小祝福の聖霊</b> </label>
             </div>
+            <!-- switch -->
             <input type="checkbox" id="Panel1" class="on-off">
             <div class="accContent">
 
               <div class="box training" id="expAmour">
                 <div class="box1">アムール<div class="boxnote">小祝福の聖霊(銀)</div>
                 </div>
-                <div class="box2" title="4000">4000</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="4000"></div>
               </div>
 
               <div class="box training" id="expPreseil">
                 <div class="box1">プレジール<div class="boxnote">小祝福の聖霊(金)</div>
                 </div>
-                <div class="box2" title="1750">1750</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="1750"></div>
               </div>
 
               <div class="box training" id="expAlegria">
                 <div class="box1">アレグリア<div class="boxnote">小祝福の聖霊(金)</div>
                 </div>
-                <div class="box2" title="18000">18000</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="18000"></div>
               </div>
 
               <div class="box training" id="expLiebe">
                 <div class="box1">リーベ<div class="boxnote">小祝福の聖霊(蒼)</div>
                 </div>
-                <div class="box2" title="19000">19000</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="19000"></div>
               </div>
 
               <div class="box training" id="expFreude">
                 <div class="box1">フロイデ<div class="boxnote">小祝福の聖霊(白)</div>
                 </div>
-                <div class="box2" title="19000">19000</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="19000"></div>
               </div>
 
               <div class="box training" id="expFarah">
                 <div class="box1">ファラハ<div class="boxnote">小祝福の聖霊(黒)</div>
                 </div>
-                <div class="box2" title="20000">20000</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="20000"></div>
               </div>
 
               <div class="box training" id="expPresent">
                 <div class="box1">プレーゼ<div class="boxnote">小祝福の聖霊</div>
                 </div>
-                <div class="box2" title="18000">18000</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="18000"></div>
               </div>
 
               <div class="box training" id="expPlacer">
                 <div class="box1">プラセル<div class="boxnote">小祝福の聖霊</div>
                 </div>
-                <div class="box2" title="10000">10000</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="10000"></div>
               </div>
 
             </div>
@@ -283,57 +225,33 @@
             <div class="box boxswitch" style="background-color: #C0C0C0; color: #000000;">
               <label for="Panel2"> <b>白の皇帝</b> </label>
             </div>
+            <!-- switch -->
             <input type="checkbox" id="Panel2" class="on-off">
             <div class="accContent">
 
               <div class="box training show" id="expEmperor01">
                 <div class="box1">白の皇帝(Lv1)</div>
-                <div class="box2" title="13000">13000</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="13000"></div>
               </div>
 
               <div class="box training show" id="expEmperor17">
                 <div class="box1">白の皇帝(Lv17)</div>
-                <div class="box2" title="15560">15560</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="15560"></div>
               </div>
 
               <div class="box training show" id="expEmperor20">
                 <div class="box1">白の皇帝(Lv20)</div>
-                <div class="box2" title="16040">16040</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="16040"></div>
               </div>
 
               <div class="box training show" id="expEmperor26">
                 <div class="box1">白の皇帝(Lv26)</div>
-                <div class="box2" title="17000">17000</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="17000"></div>
               </div>
 
               <div class="box training show" id="expEmperor51">
                 <div class="box1">白の皇帝(Lv51)</div>
-                <div class="box2" title="21000">21000</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="21000"></div>
               </div>
 
             </div>
@@ -343,6 +261,7 @@
             <div class="box boxswitch" style="background-color: #a65315;">
               <label for="Panel3"> <b>ストミ餌</b> </label>
             </div>
+            <!-- switch -->
             <input type="checkbox" id="Panel3" class="on-off">
             <div class="accContent">
 
@@ -350,48 +269,28 @@
                 <div class="box1">ブロンズ(Lv34)<br>
                   <div style="float: right; margin: 3px 7px 0px 0px;">＊ダークエルフの女王 /＊オークの勇士</div>
                 </div>
-                <div class="box2" title="235">235</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="235"></div>
               </div>
 
               <div class="box training showh1" id="expB02">
                 <div class="box1">ﾌﾞﾛﾝｽﾞ(Lv34) + ベテランの指南<br>
                   <div style="float: right; margin: 3px 7px 0px 0px;">＊ダークエルフの女王 /＊オークの勇士</div>
                 </div>
-                <div class="box2" title="265">265</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="265"></div>
               </div>
 
               <div class="box training showh1" id="expB03">
                 <div class="box1">ブロンズ(Lv31)<br>
                   <div style="float: right; margin: 3px 7px 0px 0px;">＊転送の魔法陣</div>
                 </div>
-                <div class="box2" title="220">220</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="220"></div>
               </div>
 
               <div class="box training showh1" id="expB04">
                 <div class="box1">ﾌﾞﾛﾝｽﾞ(Lv31) + ベテランの指南<br>
                   <div style="float: right; margin: 3px 7px 0px 0px;">＊転送の魔法陣</div>
                 </div>
-                <div class="box2" title="250">250</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2" title="250"></div>
               </div>
 
             </div>
@@ -401,51 +300,32 @@
             <div class="box boxswitch" style="background-color: #000000;">
               <label for="Panel4"> <b>自由欄</b> </label>
             </div>
+            <!-- switch -->
             <input type="checkbox" id="Panel4" class="on-off" checked="true">
             <div class="accContent">
 
               <div class="box training show" id="expFree01">
                 <div class="box1" title="【自由欄1】">【自由欄1】</div>
                 <div class="box2"> <input class="freeExp" type="number" value="0" min="0"
-                    title="サリエット有りの人は1.1倍の値を入力してください。"> </div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                    title="サリエット有りの人は1.1倍の値を入力してください。"></div>
               </div>
 
               <div class="box training show" id="expFree02">
                 <div class="box1" title="【自由欄2】">【自由欄2】</div>
                 <div class="box2"> <input class="freeExp" type="number" value="0" min="0"
-                    title="サリエット有りの人は1.1倍の値を入力してください。"> </div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                    title="サリエット有りの人は1.1倍の値を入力してください。"></div>
               </div>
 
               <div class="box training show" id="expFree03">
                 <div class="box1" title="【自由欄3】">【自由欄3】</div>
                 <div class="box2"> <input class="freeExp" type="number" value="0" min="0"
-                    title="サリエット有りの人は1.1倍の値を入力してください。"> </div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                    title="サリエット有りの人は1.1倍の値を入力してください。"></div>
               </div>
 
               <div class="box training show" id="expFree04">
                 <div class="box1" title="【自由欄4】">【自由欄4】</div>
                 <div class="box2"> <input class="freeExp" type="number" value="0" min="0"
-                    title="サリエット有りの人は1.1倍の値を入力してください。"> </div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                    title="サリエット有りの人は1.1倍の値を入力してください。"></div>
               </div>
 
             </div>
@@ -455,6 +335,7 @@
             <div class="box boxswitch" style="background-color: #000000;">
               <label for="Panel5"> <b>カスタマイズ</b> </label>
             </div>
+            <!-- switch -->
             <input type="checkbox" id="Panel5" class="on-off">
             <div class="accContent">
 
@@ -487,12 +368,7 @@
                   </div>
 
                 </div>
-                <div class="box2">0</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2"></div>
               </div>
 
               <div class="box training show" id="expC02">
@@ -524,12 +400,7 @@
                   </div>
 
                 </div>
-                <div class="box2">0</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2"></div>
               </div>
 
               <div class="box training show" id="expC03">
@@ -561,12 +432,7 @@
                   </div>
 
                 </div>
-                <div class="box2">0</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2"></div>
               </div>
 
               <div class="box training show" id="expC04">
@@ -598,17 +464,12 @@
                   </div>
 
                 </div>
-                <div class="box2">0</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2"></div>
               </div>
 
               <div class="box training showh3" id="expS01" title="3000">
-                <div class="box1">
-                  イベントドロップ
+                <div class="box1">イベントドロップ
+
                   <select class="rare" disabled style="display: none;">
                     <option value="0">鉄</option>
                     <option value="1">銅</option>
@@ -640,17 +501,12 @@
                   </div>
 
                 </div>
-                <div class="box2">3000</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2"></div>
               </div>
 
               <div class="box training show" id="expS02" title="13000">
-                <div class="box1">
-                  ｱｲﾄﾞﾙ/戦場アンナ
+                <div class="box1"> ｱｲﾄﾞﾙ/戦場アンナ
+
                   <select class="rare" disabled style="display: none;">
                     <option value="0">鉄</option>
                     <option value="1">銅</option>
@@ -677,12 +533,7 @@
                   </div>
 
                 </div>
-                <div class="box2">2000</div>
-                <div class="box3">
-                  <input type="button" value="－">
-                  <input class="count" type="number" value="0" min="0" max="99">
-                  <input type="button" value="＋">
-                </div>
+                <div class="box2"></div>
               </div>
 
             </div>
