--- a/html/AigisChecker.html
+++ b/html/AigisChecker.html
@@ -96,7 +96,7 @@
         <input type="button" onclick="sortByKind();       " value="性別">
         <input type="button" onclick="sortByEvent();      " value="入手先">
         <input type="button" onclick="sortByAssign();     " value="所属">
-        <input type="button" onclick="sortByGenus();      " value="節分">
+        <input type="button" onclick="sortByGenus();      " value="季節">
         <input type="button" onclick="sortByYearGacha();  " value="年度ガチャ黒">
         <input type="button" onclick="sortByTicket();     " value="ブラックチケット">
       </div>
