EXP calc Simulation upgrade

--- a/html/AigisEXP.html
+++ b/html/AigisEXP.html
@@ -123,6 +123,10 @@
                 <input type="checkbox" id="checkSariette" onchange="changePanels();">
                 育成の聖霊サリエット
               </label>
+              <label for="checkSimulation" style="user-select: none;">
+                <input type="checkbox" id="checkSimulation" onchange="changePanels();">
+                育成計算(仮)
+              </label>
             </div>
 
             <div class="box training" style="height: 22px;">
