--- a/html/AigisEXP.html
+++ b/html/AigisEXP.html
@@ -500,8 +500,8 @@
                   </div>
                   <div style="float: right; margin: 3px 7px 0px 0px;">
                     翠花の領主メアリ　　　　　鬼刃忍タチバナ<br>
-                    鋼の重装砲兵ヴァネッサ　　奇譚の幻術士タリエ
-                    超古代発明家アルレット
+                    鋼の重装砲兵ヴァネッサ　　奇譚の幻術士タリエ<br>
+                    超古代発明家アルレット　　原初の竜姫ロタン
                   </div>
 
                 </div>
