--- a/html/AigisTactics.html
+++ b/html/AigisTactics.html
@@ -153,7 +153,8 @@
         <div class="hr">
           <div class="inputbox">
             フィルタ：
-            <input id="filterbox" type="text" onchange="onChangeInput(event);">
+            <input id="filterbox" type="text" list="searchList" onchange="onChangeInput(event);">
+            <datalist id="searchList"> </datalist>
             <select id="iconStatus" onchange="onChangeSelect(this);">
               <option value="">　　覚醒前</option>
               <option value="aw">　　覚醒後</option>
