aigis expcalc backup method

--- a/html/AigisChecker.html
+++ b/html/AigisChecker.html
@@ -57,7 +57,7 @@
       <div class="card">
         <a itemprop="url" href="./AigisTactics.html">▼千年戦争アイギス　作戦図＋</a><br>
         <a itemprop="url" href="./AigisEXP.html">▼千年戦争アイギス　経験値計算機＋ BETA</a><br>
-        <div class="blink" style="color: red;">NEW !!!</div>
+        <!-- <div class="blink" style="color: red;">NEW !!!</div> -->
       </div>
 
       <div class="card">
