checker ticket fix

--- a/html/AigisChecker.html
+++ b/html/AigisChecker.html
@@ -99,6 +99,7 @@
         <input type="button" onclick="sortByGenus();      " value="季節">
         <input type="button" onclick="sortByYearGacha();  " value="年度ガチャ黒">
         <input type="button" onclick="sortByTicket();     " value="ブラックチケット">
+        <input type="button" onclick="sortByEmpTicket();  " value="帝国大戦記念チケット">
       </div>
 
       <div class="card">
