--- a/html/AigisChecker.html
+++ b/html/AigisChecker.html
@@ -95,7 +95,7 @@
         <br> 属性別 <br>
         <input type="button" onclick="sortByKind();       " value="性別">
         <input type="button" onclick="sortByEvent();      " value="入手先">
-        <input type="button" onclick="sortByAssign();     " value="所属">
+        <input type="button" onclick="sortByAssign();     " value="属性">
         <input type="button" onclick="sortByGenus();      " value="季節">
         <input type="button" onclick="sortByYearGacha();  " value="年度ガチャ黒">
         <input type="button" onclick="sortByTicket();     " value="ブラックチケット">
