fix for 08/29 cc update

--- a/html/AigisEXP.html
+++ b/html/AigisEXP.html
@@ -151,7 +151,7 @@
 
               <div class="box training show" id="expGladys">
                 <div class="box1">同レア聖霊/グラディス</div>
-                <div class="box2" title="1000"></div>
+                <div class="box2" title="1250"></div>
               </div>
 
               <div class="box training show" id="expWArmor">
@@ -362,11 +362,10 @@
 
                   <div class="boxnote">
                     Lv
-                    <input class="lv" type="number" value="42" min="1" max="99" onchange="changePanels();">
+                    <input class="lv" type="number" value="57" min="1" max="99" onchange="changePanels();">
                     <select class="cc" onchange="changePanels();">
-                      <option value="0">未CCユニット</option>
-                      <option value="1">CC済/CCのない</option>
-                      <option value="2">覚醒後のユニット</option>
+                      <option value="0">初期</option>
+                      <option value="1">覚醒済</option>
                     </select>
                     <input class="cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="changePanels();">
                   </div>
@@ -396,9 +395,8 @@
                     Lv
                     <input class="lv" type="number" value="1" min="1" max="99" onchange="changePanels();">
                     <select class="cc" onchange="changePanels();">
-                      <option value="0">未CCユニット</option>
-                      <option value="1">CC済/CCのない</option>
-                      <option value="2">覚醒後のユニット</option>
+                      <option value="0">初期</option>
+                      <option value="1">覚醒済</option>
                     </select>
                     <input class="cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="changePanels();">
                   </div>
@@ -428,9 +426,8 @@
                     Lv
                     <input class="lv" type="number" value="1" min="1" max="99" onchange="changePanels();">
                     <select class="cc" onchange="changePanels();">
-                      <option value="0">未CCユニット</option>
-                      <option value="1">CC済/CCのない</option>
-                      <option value="2">覚醒後のユニット</option>
+                      <option value="0">初期</option>
+                      <option value="1">覚醒済</option>
                     </select>
                     <input class="cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="changePanels();">
                   </div>
@@ -460,9 +457,8 @@
                     Lv
                     <input class="lv" type="number" value="1" min="1" max="99" onchange="changePanels();">
                     <select class="cc" onchange="changePanels();">
-                      <option value="0">未CCユニット</option>
-                      <option value="1">CC済/CCのない</option>
-                      <option value="2">覚醒後のユニット</option>
+                      <option value="0">初期</option>
+                      <option value="1">覚醒済</option>
                     </select>
                     <input class="cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="changePanels();">
                   </div>
@@ -492,9 +488,8 @@
                     Lv
                     <input class="lv" type="number" value="1" min="1" max="99" onchange="changePanels();">
                     <select class="cc" onchange="changePanels();">
-                      <option value="0">未CCユニット</option>
-                      <option value="1">CC済/CCのない</option>
-                      <option value="2">覚醒後のユニット</option>
+                      <option value="0">初期</option>
+                      <option value="1">覚醒済</option>
                     </select>
                     <input class="cbonus" type="checkbox" title="同クラス加算" onchange="changePanels();">
                   </div>
@@ -529,9 +524,8 @@
                     Lv
                     <input class="lv" type="number" value="1" min="1" max="30" title="30" onchange="changePanels();">
                     <select class="cc" disabled onchange="changePanels();" style="color: #316ca4;">
-                      <option value="0">未CCユニット</option>
-                      <option value="1" selected>CC済/CCのない</option>
-                      <option value="2">覚醒後のユニット</option>
+                      <option value="0">初期</option>
+                      <option value="1">覚醒済</option>
                     </select>
                     <input class="cbonus" type="checkbox" title="同クラス加算" onchange="changePanels();">
                   </div>
